project/test/semantics/unit/good/Good21_shouldEvaluateThisReference.ty
mutable class Counter {
    
    variables: {
        count: Int = 0;
    }
    
    actions: {
        increment: () -> Void = {
            this#count(this.count + 1)
        }
    }
}

singleton class WhileTest {
    
    values: {
        base: Int = 3;
    }
    
    actions: {
        main: () -> Int = {
            val counter: Counter = Counter;
            
            while (counter.count < 10) {
                counter#increment
            }
            
            this.base + counter.count // 13
        }
    }
}
